--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "firebase": "^11.1.0",
+    "firebase": "^11.4.0",
+    "html2pdf.js": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.3.0",
+    "router-dom": "^3.0.1",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
