--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2pdf.js": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "router-dom": "^3.0.1",
     "tailwindcss": "^3.4.14"
